--- a/frontend/index.html
+++ b/frontend/index.html
@@ -5,14 +5,14 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <meta name="title" content="Brave Frontier Wiki">
+  <meta name="title" content="XBraveFrontier">
   <meta name="description" content="Brave Frontier wiki (unofficial) for omni units and dual brave burst">
   <meta property="og:type" content="website">
-  <meta property="og:title" content="Brave Frontier Wiki">
+  <meta property="og:title" content="XBraveFrontier">
   <meta property="og:description" content="Brave Frontier wiki (unofficial) for omni units and dual brave burst">
   <meta property="og:image" content="">
-  <meta property="og:url" content="https://bfwiki.satyakresna.io">
-  <title>Brave Frontier Wiki</title>
+  <meta property="og:url" content="https://bravefrontier.kresna.me">
+  <title>XBraveFrontier</title>
   <link rel="apple-touch-icon" sizes="180x180" href="./assets/icons/apple-touch-icon.png">
   <link rel="icon" type="image/png" sizes="32x32" href="./assets/icons/favicon-32x32.png">
   <link rel="icon" type="image/png" sizes="16x16" href="./assets/icons/favicon-16x16.png">
@@ -35,7 +35,7 @@
   <div class="container">
     <nav class="navigation">
       <a href="/">
-        <img src="/assets/icons/bfwiki.svg" alt="Bfwiki logo" width="50" height="50">
+        <img src="/assets/icons/bfwiki.svg" alt="XBraveFrontier logo" width="50" height="50">
       </a>
       <ul class="navigation-list">
         <li>
