--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
   <meta property="og:title" content="XBraveFrontier">
   <meta property="og:description" content="Brave Frontier wiki (unofficial) for omni units and dual brave burst">
   <meta property="og:image" content="">
-  <meta property="og:url" content="https://bravefrontier.kresna.me">
+  <meta property="og:url" content="https://bravefrontier.netlify.app">
   <title>XBraveFrontier</title>
   <link rel="apple-touch-icon" sizes="180x180" href="./assets/icons/apple-touch-icon.png">
   <link rel="icon" type="image/png" sizes="32x32" href="./assets/icons/favicon-32x32.png">
