--- a/public/index.html
+++ b/public/index.html
@@ -13,21 +13,21 @@
   <meta property="og:image" content="">
   <meta property="og:url" content="">
   <title>Brave Frontier Wiki (Unofficial)</title>
-  <link rel="apple-touch-icon" sizes="180x180" href="./assets/icons/apple-touch-icon.png">
-  <link rel="icon" type="image/png" sizes="32x32" href="./assets/icons/favicon-32x32.png">
-  <link rel="icon" type="image/png" sizes="16x16" href="./assets/icons/favicon-16x16.png">
-  <link rel="manifest" href="./assets/icons/site.webmanifest">
+  <link rel="apple-touch-icon" sizes="180x180" href="/assets/icons/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="/assets/icons/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="/assets/icons/favicon-16x16.png">
+  <link rel="manifest" href="/assets/icons/site.webmanifest">
   <meta name="msapplication-config" content="/assets/icons/browserconfig.xml" />
   <meta name="msapplication-TileColor" content="#ffffff">
   <meta name="theme-color" content="#ffffff">
-  <link rel="stylesheet" href="./css/inter.css">
-  <link rel="stylesheet" href="./css/index.css">
-  <link rel="stylesheet" href="./assets/plugins/nprogress.min.css">
-  <link rel="stylesheet" href="./assets/plugins/notyf.min.css">
-  <link rel="stylesheet" href="./assets/plugins/choices.min.css">
-  <script src="./assets/plugins/nprogress.min.js" defer></script>
-  <script src="./assets/plugins/choices.min.js" defer></script>
-  <script src="./bundle.js" defer></script>
+  <link rel="stylesheet" href="/css/inter.css">
+  <link rel="stylesheet" href="/css/index.css">
+  <link rel="stylesheet" href="/assets/plugins/nprogress.min.css">
+  <link rel="stylesheet" href="/assets/plugins/notyf.min.css">
+  <link rel="stylesheet" href="/assets/plugins/choices.min.css">
+  <script src="/assets/plugins/nprogress.min.js" defer></script>
+  <script src="/assets/plugins/choices.min.js" defer></script>
+  <script src="/bundle.js" defer></script>
 </head>
 
 <body class="bg-gray-200">
