--- a/public/index.html
+++ b/public/index.html
@@ -5,14 +5,14 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <meta name="title" content="XBraveFrontier">
-  <meta name="description" content="Brave Frontier wiki (unofficial) for omni units and dual brave burst">
+  <meta name="title" content="Brave Frontier Wiki (Unofficial)">
+  <meta name="description" content="Brave Frontier wiki (Unofficial) for omni units and dual brave burst">
   <meta property="og:type" content="website">
-  <meta property="og:title" content="XBraveFrontier">
-  <meta property="og:description" content="Brave Frontier wiki (unofficial) for omni units and dual brave burst">
+  <meta property="og:title" content="Brave Frontier Wiki (Unofficial)">
+  <meta property="og:description" content="Brave Frontier wiki (Unofficial) for omni units and dual brave burst">
   <meta property="og:image" content="">
-  <meta property="og:url" content="https://bravefrontier.kresna.me">
-  <title>XBraveFrontier</title>
+  <meta property="og:url" content="">
+  <title>Brave Frontier Wiki (Unofficial)</title>
   <link rel="apple-touch-icon" sizes="180x180" href="/assets/icons/apple-touch-icon.png">
   <link rel="icon" type="image/png" sizes="32x32" href="/assets/icons/favicon-32x32.png">
   <link rel="icon" type="image/png" sizes="16x16" href="/assets/icons/favicon-16x16.png">
