--- a/public/index.html
+++ b/public/index.html
@@ -21,13 +21,11 @@
   <meta name="msapplication-TileColor" content="#ffffff">
   <meta name="theme-color" content="#ffffff">
   <link rel="stylesheet" href="/css/inter.css">
-  <link rel="stylesheet" href="/css/index.css">
+  <link rel="stylesheet" href="/dist/output.css">
   <link rel="stylesheet" href="/assets/plugins/nprogress.min.css">
   <link rel="stylesheet" href="/assets/plugins/notyf.min.css">
   <link rel="stylesheet" href="/assets/plugins/choices.min.css">
-  <script src="/assets/plugins/nprogress.min.js" defer></script>
-  <script src="/assets/plugins/choices.min.js" defer></script>
-  <script src="/bundle.js" defer></script>
+  <script src="/dist/bundle.js" async></script>
 </head>
 
 <body class="bg-gray-200">
@@ -58,6 +56,8 @@
       <p class="text-black font-bold text-center">Created in 2019</p>
     </footer>  
   </div>
+  <script src="/assets/plugins/nprogress.min.js"></script>
+  <script src="/assets/plugins/choices.min.js"></script>
 </body>
 
 </html>
