--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   <meta name="msapplication-config" content="/assets/icons/browserconfig.xml" />
   <meta name="msapplication-TileColor" content="#ffffff">
   <meta name="theme-color" content="#ffffff">
-  <link rel="stylesheet" href="/css/inter.css">
+  <link rel="stylesheet" href="/assets/fonts/inter.css">
   <link rel="stylesheet" href="/dist/output.css">
   <link rel="stylesheet" href="/assets/plugins/nprogress.min.css">
   <link rel="stylesheet" href="/assets/plugins/notyf.min.css">
